[package]
name = "json-sourcemap"
version = "0.1.0"
edition = "2021"
authors = ["attila-lin <linyiyu1992@gmail.com>"]
documentation = "https://docs.rs/json-sourcemap/"
repository = "https://github.com/attila-lin/json-sourcemap-rs"
homepage = "https://github.com/attila-lin/json-sourcemap-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["parsing"]
exclude = ["/.vscode"]

[features]
default = []

serde = ["dep:serde"]

[dependencies]
once_cell = "1.17.1"
serde_json = { version = "1.0.94", features = ["arbitrary_precision"] }
thiserror = "1.0.38"

serde = { version = "1.0.130", optional = true, features = ["derive"] }